--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng serve demo",
+    "build": "ng build --prod grange",
     "test": "jest",
     "lint": "ng lint",
-    "e2e": "ng e2e",
     "test:watch": "jest --watch"
   },
   "private": true,
