Validation and Forgot

--- a/g-api/config.yaml
+++ b/g-api/config.yaml
@@ -9,11 +9,21 @@ databases:
       read_only: false
       pool_size: 100
 store_json: true
+allow_register: true
+cache:
+  driver: guillotina.contrib.redis
+  updates_channel: guillotina
 applications:
   - guillotina_cms
   - guillotina.contrib.cache
   - guillotina.contrib.catalog.pg
   - guillotina.contrib.dbusers
+  - guillotina.contrib.mailer
+  - guillotina.contrib.redis
+  - guillotina.contrib.pubsub
+  - guillotina.contrib.email_validation
+  - guillotina.contrib.templates
+  - guillotina.contrib.redis_session
   - guillotina_authentication
 host: 0.0.0.0
 address: 8081
@@ -22,6 +32,9 @@ static:
   - assets: guillotina:static/assets
 root_user:
   password: root
+mailer:
+  utility:
+    guillotina.contrib.mailer.utility.PrintingMailerUtility
 auth_extractors:
   - guillotina.auth.extractors.CookiePolicy
   - guillotina.auth.extractors.BearerAuthPolicy
@@ -30,8 +43,10 @@ auth_extractors:
 auth_token_validators:
   - guillotina.auth.validators.SaltedHashPasswordValidator
   - guillotina.auth.validators.JWTValidator
+auth_user_identifiers:
+  - guillotina.contrib.dbusers.users.DBUserIdentifier
 redis:
-  host: localhost
+  host: redis
   port: 6379
 jwt:
   secret: secret
