--- a/g-api/docker-compose.yaml
+++ b/g-api/docker-compose.yaml
@@ -7,26 +7,20 @@ services:
       POSTGRES_DB: guillotina
       POSTGRES_USER: guillotina
       POSTGRES_PASSWORD: guillotina
+  redis:
+    image: redis:5
+    container_name: redis_test
   guillotina:
-    image: plone/guillotina_cms:latest
+    image: plone/guillotina_cms:master
     command: sh -c "sleep 5 && g -c /usr/src/app/config.yml"
     ports:
       - '8081:8081'
     links:
       - postgres
+      - redis
     volumes:
       - ${PWD}/g-api/config.yaml:/usr/src/app/config.yml
   init:
-    image: curlimages/curl:7.68.0
-    command: "-L -v -X POST http://guillotina:8081/db --retry-connrefused --retry 10 --user root:root --retry-delay 10 -d '{\"@type\": \"Container\", \"id\": \"web\"}'"
-    links:
-      - guillotina
-    depends_on:
-      - guillotina
-  init2:
-    image: curlimages/curl:7.68.0
-    command: "-L -v -X POST http://guillotina:8081/db/web/@addons --retry-connrefused --retry 10 --user root:root --retry-delay 12 -d '{\"id\": \"dbusers\"}'"
-    links:
-      - guillotina
-    depends_on:
-      - init
+    image: guillotina/initializer:latest
+    volumes:
+      - ${PWD}/g-api/init.yaml:/usr/src/app/config.yaml
