--- a/projects/grange/package.json
+++ b/projects/grange/package.json
@@ -1,8 +1,9 @@
 {
   "name": "grange",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "peerDependencies": {
-    "@angular/common": "^8.2.9",
-    "@angular/core": "^8.2.9"
+    "@angular/common": "^9.0.4",
+    "@angular/cdk": "~9.0.1",
+    "@angular/core": "^9.0.4"
   }
 }
