--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.9",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.2.9",
-    "@angular/compiler": "~8.2.9",
-    "@angular/core": "~8.2.9",
-    "@angular/forms": "~8.2.9",
-    "@angular/platform-browser": "~8.2.9",
-    "@angular/platform-browser-dynamic": "~8.2.9",
-    "@angular/router": "~8.2.9",
+    "@angular/animations": "~9.0.5",
+    "@angular/cdk": "~9.0.1",
+    "@angular/common": "~9.0.5",
+    "@angular/compiler": "~9.0.5",
+    "@angular/core": "~9.0.5",
+    "@angular/forms": "~9.0.5",
+    "@angular/platform-browser": "~9.0.5",
+    "@angular/platform-browser-dynamic": "~9.0.5",
+    "@angular/router": "~9.0.5",
     "@briebug/jest-schematic": "^2.1.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^8.4.0",
@@ -28,34 +28,33 @@
     "date-fns": "^2.9.0",
     "jexl": "^2.2.2",
     "medium-editor": "^5.23.3",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "z-schema": "^4.2.1",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.9",
-    "@angular-devkit/build-ng-packagr": "~0.803.9",
-    "@angular/cli": "~8.3.9",
-    "@angular/compiler-cli": "~8.2.9",
-    "@angular/language-service": "~8.2.9",
+    "@angular-devkit/build-angular": "~0.900.5",
+    "@angular-devkit/build-ng-packagr": "~0.900.5",
+    "@angular/cli": "~9.0.5",
+    "@angular/compiler-cli": "~9.0.5",
+    "@angular/language-service": "~9.0.5",
     "@ngrx/store-devtools": "^8.4.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "24.0.19",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "24.9.0",
     "jest-preset-angular": "7.1.1",
     "mrs-developer": "^1.1.3",
-    "ng-packagr": "^5.4.0",
+    "ng-packagr": "^9.0.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tsickle": "^0.37.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.7.5"
   },
   "jest": {
     "preset": "jest-preset-angular",
