--- a/g-api/config.yaml
+++ b/g-api/config.yaml
@@ -81,26 +81,6 @@ global_disallowed_types:
   - Item
   - Container
   - Folder
-behaviors:
-  myannotationdata:
-    title: MyData
-    for: guillotina.interfaces.IItem
-    inherited_class: guillotina.behaviors.instance.AnnotationBehavior
-    properties:
-      mydata1:
-        type: guillotina.schema.TextLine
-        title: Text
-        default: Hello
-        required: true
-  mycontextdata:
-    title: MyLocalData
-    for: guillotina.interfaces.IItem
-    inherited_class: guillotina.behaviors.instance.ContextBehavior
-    properties:
-      mydata2:
-        type: guillotina.schema.TextLine
-        title: Text
-        default: Hello
 contents:
   player:
     title: Player
@@ -108,101 +88,20 @@ contents:
     inherited_class: guillotina.content.Item
     add_permission: guillotina.AddContent
     properties:
-      team:
-        type: guillotina.schema.TextLine
-        title: Team
       rank:
         type: guillotina.schema.Int
         title: Rank
-  canvas:
-    title: Canvas
-    inherited_interface: guillotina.interfaces.IItem
-    inherited_class: guillotina.content.Item
-    add_permission: guillotina.AddContent
-    properties:
-      points:
-        type: guillotina.schema.JSONField
-        title: Points
-  mydoc:
-    title: My Doc
+  team:
+    title: Team
     inherited_interface: guillotina.interfaces.IFolder
     inherited_class: guillotina.content.Folder
     add_permission: guillotina.AddContent
     allowed_types:
-      - Image
-      - File
-    behaviors:
-      - guillotina.behaviors.dublincore.IDublinCore
-      - guillotina_cms.interfaces.base.ICMSBehavior
-      - guillotina_cms.interfaces.Imycontextdata
+      - player
     properties:
-      json_example:
+      contests:
         type: guillotina.schema.JSONField
-        schema:
-          type: object
-          properties:
-            items:
-              type: array
-        title: My Json Field
-      text:
-        type: guillotina_cms.fields.richtext.RichTextField
-        widget: richtext
-        title: Text
-        write_permission: guillotina.Manager
-        index:
-          type: searchabletext
-        required: true
-      myoption:
-        type: guillotina.schema.Choice
-        title: My loved option
-        vocabulary:
-          guillotina: Guillotina
-          volto: Volto
-        index:
-          type: keyword
-      mysecondoption:
-        type: guillotina.schema.Choice
-        title: My loved option
-        vocabulary: appsettings:myoptions
-        index:
-          type: keyword
-      mylovedlanguage:
-        type: guillotina.schema.Choice
-        title: My loved option
-        vocabulary: languages
-        index:
-          type: keyword
-      mylovedlist:
-        type: guillotina.schema.List
-        value_type: guillotina.schema.TextLine
-        title: My loved action
-        index:
-          type: keyword
-    fieldsets:
-      default:
-        - title
-        - guillotina.behaviors.dublincore.IDublinCore.description
-        - text
-        - myoption
-        - mysecondoption
-        - mylovedlist
-        - mylovedlanguage
-      dates:
-        - guillotina.behaviors.dublincore.IDublinCore.effective_date
-        - guillotina.behaviors.dublincore.IDublinCore.expiration_date
-      ownership:
-        - guillotina.behaviors.dublincore.IDublinCore.creators
-        - guillotina.behaviors.dublincore.IDublinCore.publisher
-        - guillotina.behaviors.dublincore.IDublinCore.contributors
-      categorization:
-        - guillotina.behaviors.dublincore.IDublinCore.tags
-        - guillotina_cms.interfaces.base.ICMSBehavior.language
-      settings:
-        - guillotina_cms.interfaces.base.ICMSBehavior.hidden_navigation
-        - guillotina_cms.interfaces.base.ICMSBehavior.content_layout
-    layouts:
-      - document_view
-      - layout_view
+        title: Contests
 default_tiles:
   Document:
     tiles:
@@ -271,6 +170,5 @@ workflows:
 workflows_content:
   guillotina.interfaces.IResource: basic
   guillotina_cms.content.document.IDocument: guillotina_simple_publication
-  guillotina_cms.interfaces.Imydoc: guillotina_simple_publication
 allow_discussion_types:
   - Document
