fix demo and tutorial

--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@angular/platform-browser-dynamic": "~9.0.4",
     "@angular/router": "~9.0.4",
     "@briebug/jest-schematic": "^2.1.0",
-    "@guillotinaweb/grange-core": "latest",
+    "@guillotinaweb/grange-core": "^1.2.3",
     "@guillotinaweb/grange-form": "latest",
-    "@guillotinaweb/ngx-state-traverser": "latest",
+    "@guillotinaweb/ngx-state-traverser": "^1.2.5",
     "@guillotinaweb/pastanaga-angular": "^1.18.2",
     "@ngrx/core": "^1.2.0",
-    "@ngrx/effects": "^8.4.0",
-    "@ngrx/store": "^8.4.0",
+    "@ngrx/effects": "^8.6.0",
+    "@ngrx/store": "^8.6.0",
     "angular-svg-icon": "^8.0.0",
     "angular-traversal": "latest",
     "date-fns": "^2.9.0",
